<resources>
    <string name="app_name">AndroidXDemo</string>
    <!-- Titles -->
    <string name="title_atomicfu">AtomicFU</string>
    <string name="title_datetime">DateTime</string>
    <string name="title_html">HTML</string>
    <string name="title_serialization">Serialization</string>
    <!-- Buttons -->
    <string name="button_atomicfu_lock_demo">Lock Demo</string>
    <string name="button_atomicfu_run_race">Run Race</string>
    <string name="button_datetime_date">Pick Date</string>
    <string name="button_html_generate">Generate</string>
    <string name="button_serialization_execute">Run Serde</string>
    <!-- Inputs -->
    <string name="input_datetime_timezone">Select Time Zone:</string>
    <string name="input_html_name"><u>Name:</u></string>
    <string name="input_html_styling"><u>Styling:</u></string>
    <string name="input_serialization_fizz">Enter Fizz:</string>
    <string name="input_serialization_bazz">Enter Bazz (Comma-Separated):</string>
    <string name="input_serialization_count">Enter Count:</string>
    <string name="input_serialization_type">Select Type:</string>
    <!-- Labels -->
    <string name="label_atomicfu_header">\"Up And Atom!\" Variable Races</string>
    <string name="label_datetime_date_demo">Date Demo</string>
    <string name="label_datetime_time_demo">Time Demo</string>
    <string name="label_html_input">Input</string>
    <string name="label_html_generated_html">Generated HTML</string>
    <string name="label_html_strikethrough"><s>Strikethrough</s></string>
    <string name="label_html_bold">Bold</string>
    <string name="label_html_underlined"><u>Underlined</u></string>
    <string name="label_serialization_type_radio_normal">Normal</string>
    <string name="label_serialization_type_radio_third_party">Third-Party</string>
    <string name="label_serialization_serialized">Serialized Foo</string>
    <string name="label_serialization_deserialized">Deserialized Foo</string>
    <!-- Defaults -->
    <string name="default_html_name">Enter Name</string>
    <string name="default_serialization_fizz">Fizz Value</string>
    <string name="default_serialization_bazz">Bazz Value</string>
    <string name="default_serialization_count">0</string>
    <!-- Content -->
    <string name="content_atomicfu_locked_value">Locked Value: %s</string>
    <string name="content_atomicfu_safe_value">&#160;&#160;&#160;&#160;Safe Value: %s</string>
    <string name="content_atomicfu_unsafe_value">Unsafe Value: %s</string>
    <plurals name="content_datetime_dates_between">
        <item quantity="one">%d day between %s and now.</item>
        <item quantity="other">%d days between %s and now.</item>
    </plurals>
    <string name="content_datetime_current_time">The current time in %s is %s.</string>
    <string-array name="content_datetime_timezones">
        <item> </item>
        <item>Cairo</item>
        <item>New York City</item>
        <item>London</item>
        <item>New Delhi</item>
        <item>Tokyo</item>
    </string-array>
    <string name="content_html_hello">Hello, %s!</string>
    <string name="content_html_link">Would you like to know more?</string>
</resources>