<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_serialization">

    <fragment
        android:id="@+id/navigation_serialization"
        android:name="com.severett.androidxdemo.ui.serialization.SerializationFragment"
        android:label="@string/title_serialization"
        tools:layout="@layout/fragment_serialization" />

    <fragment
        android:id="@+id/navigation_atomicfu"
        android:name="com.severett.androidxdemo.ui.atomicfu.AtomicFUFragment"
        android:label="@string/title_atomicfu"
        tools:layout="@layout/fragment_atomicfu" />

    <fragment
        android:id="@+id/navigation_html"
        android:name="com.severett.androidxdemo.ui.html.HTMLFragment"
        android:label="@string/title_html"
        tools:layout="@layout/fragment_html" />

</navigation>