<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.atomicfu.AtomicFUFragment">

    <Button
        android:id="@+id/runRaceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="108dp"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:text="@string/button_atomicfu_run_race"
        android:textColor="@color/apiumhub_green_main"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/lockDemoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:text="@string/button_atomicfu_lock_demo"
        android:textColor="@color/apiumhub_green_main"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unsafeValueLabel"
        android:layout_width="180dp"
        android:layout_height="26dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/safeValueLabel"
        tools:text="@string/content_atomicfu_unsafe_value" />

    <TextView
        android:id="@+id/lockedValueLabel"
        android:layout_width="180dp"
        android:layout_height="26dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lockDemoButton"
        tools:text="@string/content_atomicfu_locked_value" />

    <TextView
        android:id="@+id/safeValueLabel"
        android:layout_width="180dp"
        android:layout_height="26dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/runRaceButton"
        tools:text="@string/content_atomicfu_safe_value" />

    <TextView
        android:id="@+id/headerLabel"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:background="@color/apiumhub_green_main"
        android:gravity="center"
        android:text="@string/label_atomicfu_header"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>