<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.serialization.SerializationFragment">

    <TextView
        android:id="@+id/text_serialization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646" />

    <TextView
        android:id="@+id/enterFizzLabel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/apiumhub_green_main"
        android:gravity="center_vertical"
        android:paddingStart="26dp"
        android:paddingEnd="26dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/input_serialization_fizz" />

    <EditText
        android:id="@+id/editTextFizz"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/default_serialization_fizz"
        android:inputType="textPersonName"
        android:labelFor="@id/enterFizzLabel"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterFizzLabel"
        tools:text="@string/default_serialization_fizz" />

    <TextView
        android:id="@+id/enterBazzLabel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/apiumhub_green_main"
        android:gravity="center_vertical"
        android:paddingStart="26dp"
        android:paddingEnd="26dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFizz"
        tools:text="@string/input_serialization_bazz" />

    <EditText
        android:id="@+id/editTextBazz"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/default_serialization_bazz"
        android:inputType="textPersonName"
        android:labelFor="@id/enterBazzLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterBazzLabel"
        tools:text="@string/default_serialization_bazz" />

    <TextView
        android:id="@+id/enterCountLabel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/apiumhub_green_main"
        android:gravity="center_vertical"
        android:paddingStart="26dp"
        android:paddingEnd="26dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBazz"
        tools:text="@string/input_serialization_count" />

    <EditText
        android:id="@+id/editTextCount"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_serialization_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterCountLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>