<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.datetime.DateTimeFragment">

    <TextView
        android:id="@+id/dateDemoSectionLabel"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:background="@color/apiumhub_green_main"
        android:gravity="center"
        android:text="@string/label_datetime_date_demo"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/daysBetweenDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickDateButton"
        tools:text="Lorem Ipsum" />

    <Button
        android:id="@+id/pickDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="139dp"
        android:backgroundTint="@color/black"
        android:text="@string/button_datetime_date"
        android:textColor="@color/apiumhub_green_main"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateDemoSectionLabel" />

    <TextView
        android:id="@+id/timeDemoSectionLabel"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="36dp"
        android:background="@color/apiumhub_green_main"
        android:gravity="center"
        android:text="@string/label_datetime_time_demo"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daysBetweenDisplay" />

    <TextView
        android:id="@+id/selectTimeZoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="46dp"
        android:text="@string/input_datetime_timezone"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeDemoSectionLabel" />

    <Spinner
        android:id="@+id/timeZoneSpinner"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeDemoSectionLabel" />

    <TextView
        android:id="@+id/currentTimeDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectTimeZoneLabel"
        tools:text="@string/content_datetime_current_time" />

</androidx.constraintlayout.widget.ConstraintLayout>